Closed
Bug 1512589
Opened 7 years ago
Closed 7 years ago
Crash in libwayland-client.so.0.3.0@0x6cbc when typing something in the address bar
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
mozilla66
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox64 | --- | unaffected |
| firefox65 | --- | fixed |
| firefox66 | --- | fixed |
People
(Reporter: kubrick, Assigned: stransky)
References
(Blocks 1 open bug)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
On Wayland (Build ID 20181206214149 started with GDK_BACKEND=wayland on a fresh profile) firefox crashes with bp-052837b9-9fcc-4a6c-801e-daf530181207 randomly (after a few characters) when typing something in the url bar (for example, trying to go to about:config).
Platform: intel graphics, wayland, gnome 3.30.2, arch linux, kernel 4.19.7)
| Reporter | ||
Updated•7 years ago
|
Crash Signature: bp-052837b9-9fcc-4a6c-801e-daf530181207 → [@ libwayland-client.so.0.3.0@0x6cbc ]
| Assignee | ||
Comment 1•7 years ago
|
||
According the backtrace this should be fixed by Bug 1512415.
| Reporter | ||
Comment 2•7 years ago
|
||
Ok, I'll report back in a few hours when the next build rolls out.
| Assignee | ||
Comment 3•7 years ago
|
||
Yes, I see that now and it's not related to Bug 1512415.
Assignee: nobody → stransky
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 4•7 years ago
|
||
It's because moz_container_get_gtk_container_surface() called from map() returns null wl_surface owned by GtkWidget. That's somehow unexpected.
| Reporter | ||
Comment 5•7 years ago
|
||
Still happens 20181207093029, so yeah, unrelated to Bug 1512415.
I can reproduce it very reliably on my machine.
bp-6b2c1f79-bb53-48ad-b726-9a55f0181207
bp-0203cc92-7176-4902-b417-9e9290181207
...
| Assignee | ||
Comment 6•7 years ago
|
||
It's not quaranteed that we have a valid wl_surface at GtkWidget::map event.
In that case create it at GtkWidget::map-event handler which is called after
widget show.
| Assignee | ||
Comment 7•7 years ago
|
||
| Assignee | ||
Updated•7 years ago
|
Component: Graphics → Widget: Gtk
Updated•7 years ago
|
Crash Signature: [@ libwayland-client.so.0.3.0@0x6cbc ] → [@ libwayland-client.so.0.3.0@0x6cbc]
[@ libwayland-client.so.0.3.0@0x678a]
[@ libwayland-client.so.0.3.0@0x5b8a]
[@ libwayland-client.so.0.3.0@0x5fce]
Comment 8•7 years ago
|
||
yep, still happening in 20181207214033
Bisection result:
2018-12-08T14:38:27: DEBUG : Using url: https://hg.mozilla.org/integration/autoland/json-pushes?changeset=579938e9fc5ba02af8c41a4dade3b2bc44ead969&full=1
2018-12-08T14:38:28: DEBUG : Found commit message:
No Bug, mozilla-central repo-update HSTS HPKP remote-settings - a=repo-update r=RyanVM
Differential Revision: https://phabricator.services.mozilla.com/D13896
2018-12-08T14:38:28: INFO : The bisection is done.
Comment 10•7 years ago
|
||
I can reliably reproduce the crash when I go to gmail
| Assignee | ||
Updated•7 years ago
|
Keywords: checkin-needed
Comment 11•7 years ago
|
||
Pushed by csabou@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c10d57e49076
[Wayland] Map mozcontainer from map-event signal, r=jhorak
Keywords: checkin-needed
Comment 12•7 years ago
|
||
I would like to add that the crash happens after the cursor in the URL string moves to a position other than the end and then the user types in one more character.
Updated•7 years ago
|
Crash Signature: [@ libwayland-client.so.0.3.0@0x6cbc]
[@ libwayland-client.so.0.3.0@0x678a]
[@ libwayland-client.so.0.3.0@0x5b8a]
[@ libwayland-client.so.0.3.0@0x5fce] → [@ libwayland-client.so.0.3.0@0x6cbc]
[@ libwayland-client.so.0.3.0@0x678a]
[@ libwayland-client.so.0.3.0@0x5b8a]
[@ libwayland-client.so.0.3.0@0x5fce]
[@ libwayland-client.so.0.3.0@0x5a2a]
Comment 13•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox66:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla66
Comment 14•7 years ago
|
||
Please nominate this for Beta approval when you get a chance.
status-firefox64:
--- → unaffected
status-firefox-esr60:
--- → unaffected
Flags: needinfo?(stransky)
Keywords: crash
| Assignee | ||
Comment 15•7 years ago
|
||
Comment on attachment 9029969 [details]
Bug 1512589 - [Wayland] Map mozcontainer from map-event signal, r=jhorak
[Beta/Release Uplift Approval Request]
Feature/Bug causing the regression: Bug 1489902
User impact if declined: Firefox may crash on Wayland backend when a new window is opened.
Is this code covered by automated tests?: No
Has the fix been verified in Nightly?: Yes
Needs manual test from QE?: No
If yes, steps to reproduce:
List of other uplifts needed: None
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky): Wayland only patch, baked on nightly.
String changes made/needed: none
Flags: needinfo?(stransky)
Attachment #9029969 -
Flags: approval-mozilla-beta?
Comment 16•7 years ago
|
||
Comment on attachment 9029969 [details]
Bug 1512589 - [Wayland] Map mozcontainer from map-event signal, r=jhorak
[Triage Comment]
Fixes a crash for Linux builds with Wayland enabled. Approved for 65.0b6.
Attachment #9029969 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 17•7 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•