Bug 1512589 - [Wayland] Map mozcontainer from map-event signal. r=jhorak, a=RyanVM

It's not quaranteed that we have a valid wl_surface at GtkWidget::map event.
In that case create it at GtkWidget::map-event handler which is called after
widget show.

Differential Revision: https://phabricator.services.mozilla.com/D13979

--HG--
extra : source : c10d57e490762a628dcb53d44449ea2e9de919ca